--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,26 @@
     height: 10px;
     background-color: #f00;
 }
+.height {
+    height: 45px;
+}
+label {
+    display: block;
+    margin: 0!important;
+    font-weight: bold!important;
+}
+.validation {
+    margin-top: 8px;
+}
+.marginTop {
+    margin-top: 5px;
+}
+.transparent {
+    width: 100%;
+    border: transparent!important;
+}
+.buttonFlexBetween {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
